# Threat-Intelligence

./: .env.example  .gitignore  .papyrus-production-workspace  .venv  AGENTS.md  CONSOLE-CHAT-FIX-STATUS.md  MANUAL-TEST-GUIDE.md  README-WEB-CONSOLE-FIX.md  README.md  VERIFICATION-SUMMARY.md  WEB-CONSOLE-CHAT-FIX-VERIFICATION.md  WEB-CONSOLE-CHAT-FIX.md  amplify.yml  components.json  conftest.py  cucumber.js  eslint.config.mjs  next.config.ts  node_modules  package-lock.json  package.json  papyrus-config.example.yaml  pyproject.toml  test-production-console-chat.sh  test_production_iam.py  tsconfig.json  verify-console-chat-fix.sh
amplify/: backend.ts
amplify/functions/console-chat-responder/: Cargo.toml  Dockerfile  resource.ts
amplify/functions/console-chat-responder/py/: execute_tactus_runner.py
amplify/functions/console-chat-responder/src/: main.rs
app/: globals.css  layout.tsx  page.tsx  tailwind.css
components/: amplify-client-provider.tsx  archive-grid.tsx  archive-shell.tsx  article-page.tsx  article-video.tsx  blog-page-background.tsx  news-desk-client-provider.tsx  news-desk-page.tsx  news-desk-taxonomy-client.ts  newspaper.tsx  papyrus-console-shell.tsx  presentation-footer.tsx  presentation-shell.tsx  reader-auth-control.tsx  reader-auth-state.ts  reader-settings.ts  reader-theme-control.tsx  reference-source-preview.tsx  settings-page.tsx  topic-steering-workspace.tsx  use-resolved-papyrus-theme.ts
config/: bdd-canonical.env.example
content/: edition.json
corpora/: papyrus-analysis-profiles.yml  papyrus-lexical-steering.yml  papyrus-newsroom-sections.yml  papyrus-public-topics.yml  papyrus-publication-doctrine.yml  papyrus-required-procedures.json  papyrus-semantic-concepts.yml  papyrus-semantic-relation-types.yml  papyrus-steering.yml
docs/: agent-loop-patterns.md  automated-publication-research-workflow.md  automation-ai-ml-academic-research-dispatch.md  automation-chorus-code-review-research.md  category-steering-runbook.md  console-chat-iam-fix-verification.md  console-chat-runbook.md  curation-steering-runbook.md  favicon-pipeline.md  inbound-email-submissions.md  internal-knowledge-research.md  layout-system.md  local-dev-431-troubleshooting.md  new-publication-from-corpus.md  newsroom-worker-bootstrap.md  reference-processing-terminology.md  slack-agent.md  threat-intelligence-bootstrap.md  video-pipeline.md  web-console-chat-iam-fix.md
features/: console-agent-live.feature  newspaper-layout.feature
features_backend/: assignment-management.feature  console-agent-live-assignments.feature  console-agent-live-core.feature  console-agent-live-reference-curation.feature  console-agent-live-references.feature  console-agent-live.feature  research-reporting-context.feature
lib/: amplify-outputs-guard.ts  amplify-outputs-path.ts  amplify-server-runtime.ts  archive-data.ts  archive-types.ts  articles.ts  blog-defense-layout.ts  cached-content-repository.ts  category-dashboard.ts  category-repository.ts  console-chat-client.ts  console-web-context.ts  content-load-timing.ts  content-repository.ts  content-types.ts  curation-repository.ts  doctrine.ts  edition-config.ts  edition-routes.ts  edition-sections.ts  excerpts.ts  graphql-content-repository.ts  image-url.ts  layout-plan.ts  layout-scenarios.ts  markdown-content-repository.ts  news-desk-assignments.ts  news-desk-session.ts  newspaper-layout.ts  newsroom-card-layout.ts  newsroom-category-drilldown.ts  newsroom-forum-routes.ts  newsroom-index-filters.ts  newsroom-knowledge-query-request.ts  papyrus-object-kinds.ts  papyrus-web-locations.ts  pictogram-video-motion.ts  presentation-footer.ts  pretext-layout.ts  (+12 more)
(+365 files in other folders)
