[project]
name = "papyrus-newsroom"
version = "0.1.0"
description = "Papyrus newsroom Python tools and CLI."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "PyYAML >=6.0.2,<7.0.0",
    "tactus >=0.48.1,<0.49.0",
]

[project.scripts]
papyrus-newsroom = "papyrus_newsroom.cli:main"

[tool.poetry]
packages = [{ include = "papyrus_newsroom", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
