[project]
name = "papyrus-newsroom"
version = "0.1.0"
description = "Papyrus newsroom Python tools and CLI."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "PyYAML >=6.0.2,<7.0.0",
    "boto3 >=1.34.0,<2.0.0",
    "markitdown[all] >=0.1.0,<1.0.0",
    "tiktoken >=0.12.0,<0.13.0",
    "tactus @ file:///Users/ryan/Projects/Tactus",
]

[project.scripts]
papyrus = "papyrus.cli:main"

[tool.poetry]
package-mode = false
packages = [
    { include = "papyrus", from = "src" },
    { include = "papyrus_newsroom", from = "src" },
    { include = "papyrus_knowledge_query", from = "src" },
    { include = "papyrus_content", from = "src" },
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
behave = "^1.2.6"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
