[package]
name = "papyrus_console_chat_responder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
aws-config = "1.8.17"
aws-credential-types = "1.2.14"
aws-sdk-dynamodb = "1.112.0"
aws-sdk-ssm = "1.110.0"
aws-sigv4 = { version = "1.4.4", features = ["http1"] }
aws_lambda_events = "1.2.0"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
futures-util = "0.3.31"
http = "1.4.0"
lambda_runtime = "1.2.0"
reqwest = { version = "0.13.3", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "io-util", "process", "time"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.1", features = ["v4"] }
